# fmo-solver

./: CMakeLists.txt  aggregator.cpp  aggregator.h  config.h  error.cpp  error.h  expander.cpp  expander.h  fluorochrom.h  group.h  input.cpp  input.h  main.cpp  queue.cpp  queue.h  search.cpp  search.h  solver.cpp  solver.h  state.h  worker.cpp  worker.h
.github/workflows/: build.yml
